--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+     box-sizing: border-box;
+    font-family: 'Josefin Sans', sans-serif !important;
+     
+
+     
+
 }
+Button{
+    text-transform: none !important;
+    
+    
+}
+.loginInput .MuiInputBase-input {
+    color: white;
+  }
+  
+  .loginInput label.Mui-focused {
+    color: white;
+  }
+  
+  .loginInput .MuiInput-underline:after {
+    borderBottomColor: white;
+  }
+  
+  .loginInput .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+    border-color: white;
+  }
+  
+  .loginInput .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+    border-color: white;
+  }
+  
+  .loginInput .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+    border-color: white;
+  }
+  .loginInput .MuiInputBase-input::placeholder {
+    color: white !important;
+    opacity: 1; 
+  }
